# UnityHidApiPlugin

./: .gitmodules  CMakeLists.txt  README.md  UnityHidApiPlugin.def
AdxIO4ButtonRing/: CMakeLists.txt
AdxIO4ButtonRing/src/: AdxIO4ButtonRing.cpp  AdxIO4ButtonRing.h  ConnectionProperties.h
AdxIO4ButtonRing/test/: AdxIO4ButtonRingTest.cpp  CMakeLists.txt
src/: ConnectionProperties.h  PluginWrapper.cpp  PluginWrapper.h  UnityHidApiPlugin.cpp  UnityHidApiPlugin.h
test/: CMakeLists.txt  UnityHidApiPluginTest.cpp
